# pixel-screen-bike-share

./: .gitignore  CLAUDE.md  README.md  bixi-display.service  config.example.json  main.py  pyproject.toml  requirements.txt
deploy/: pixel-transit.service
src/pixel_transit/: __init__.py  __main__.py  app.py  cli.py  config.py  geo.py  pixoo.py  schedule.py  setup_server.py  status.py  sun.py  wifi.py
src/pixel_transit/lcd/: __init__.py  __main__.py  buttons.py  controller.py  menu.py  st7789.py
src/pixel_transit/providers/: __init__.py  avelo.py  base.py  bixi.py  communauto.py  gbfs.py  registry.py
src/pixel_transit/rendering/: __init__.py  bikeshare.py  carshare.py  common.py  fonts.py  icons.py
tests/: test_geo.py  test_menu.py  test_modes.py  test_providers.py  test_schedule.py
