[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-transit"
version = "1.0.0"
description = "Live transit status (BIXI, àVélo, Communauto) on a Divoom Pixoo 64 LED display."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask>=3.0,<4.0",
    "Pillow>=10.0,<12.0",
    "requests>=2.31,<3.0",
    "zeroconf>=0.131,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
pixel-transit = "pixel_transit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pixel_transit = ["assets/*.png"]
